<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >
    <!--Used Constraint Layout as its used with complex views architecture and stops any nesting between other layouts-->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="378dp"
        android:layout_height="668dp"
        android:layout_gravity="center"
        android:background="@color/sin_in_back"
        android:gravity="center"
        tools:context=".LoginPageFragment"
        >

        <TextView

            android:id="@+id/sign_in_"
            android:layout_width="248dp"
            android:layout_height="82dp"
            android:paddingLeft="80dp"
            android:shadowColor="@android:color/background_dark"
            android:shadowRadius="20"
            android:text="@string/sign_in_"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="36sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.115"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.027"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/user_name"
            android:layout_width="119dp"
            android:layout_height="50dp"
            android:padding="5dp"
            android:text="@string/user_name"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@+id/user_name_editText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.061"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0"
            tools:ignore="MissingConstraints" />

        <EditText
            android:id="@+id/user_name_editText"
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="280dp"
            android:autofillHints="username"
            android:ems="10"
            android:hint="@string/prompt_email"
            android:inputType="textEmailAddress"
            android:minHeight="48dp"
            android:padding="10dp"
            android:textColorHint="#5D4037"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.153"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="MissingConstraints,TextContrastCheck" />

        <TextView
            android:id="@+id/pass_word"
            android:layout_width="103dp"
            android:layout_height="40dp"
            android:padding="5dp"
            android:text="@string/password"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@+id/loginFragmentUserPassword_editText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.054"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/user_name_editText"
            app:layout_constraintVertical_bias="0.376"
            tools:ignore="MissingConstraints" />

        <EditText
            android:id="@+id/loginFragmentUserPassword_editText"
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="44dp"
            android:autofillHints="password"
            android:hint="@string/prompt_password"
            android:inputType="textPassword"
            android:minHeight="48dp"
            android:textColorHint="#37474F"
            app:layout_constraintBottom_toTopOf="@+id/createAccountbutton"
            app:layout_constraintTop_toBottomOf="@+id/user_name_editText"
            app:layout_constraintVertical_bias="0.228"
            tools:ignore="MissingConstraints,DuplicateSpeakableTextCheck"
            tools:layout_editor_absoluteX="15dp" />

        <Button
            android:id="@+id/createAccountbutton"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:background="@color/btn_color"
            android:text="@string/create_Account"
            android:textColor="#CFD8DC"
            android:textSize="20sp"
            app:layout_constraintBaseline_toBaselineOf="@+id/SignInbutton"
            app:layout_constraintEnd_toStartOf="@+id/SignInbutton"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/SignInbutton"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:background="@color/btn_color"
            android:text="@string/sign_in"
            android:textColor="#CFD8DC"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/createAccountbutton"
            app:layout_constraintTop_toBottomOf="@+id/user_name_editText"
            app:layout_constraintVertical_bias="0.72" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
