<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >
    <!--Used Constraint Layout as its used with complex views architecture and stops any nesting between other layouts-->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/inst_color"
        tools:context=".WelcomePageFragment">
        <TextView
            android:id="@+id/welcomeText"
            android:layout_width="403dp"
            android:layout_height="613dp"

            android:background="@color/welcome_text_back"
            android:text="@string/welcome_"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textSize="28sp"
            app:layout_constraintBottom_toBottomOf="@+id/welcomBtn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.454"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/welcome"
            android:layout_width="410dp"
            android:layout_height="84dp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="30dp"
            android:background="@color/welcome_text_back"
            android:paddingLeft="50dp"
            android:paddingTop="30dp"
            android:shadowColor="@color/black"
            android:shadowRadius="10"
            android:text="@string/welcome_text"
            android:textAlignment="center"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="34sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/welcomeText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.058"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <Button
            android:id="@+id/welcomBtn"
            android:layout_width="228dp"
            android:layout_height="59dp"
            android:background="@color/btn_color"
            android:text="@string/welcome"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>